--- a/css/partials/_LeftSide.scss
+++ b/css/partials/_LeftSide.scss
@@ -38,6 +38,9 @@
     height: 566px;
     @media screen and (max-width: $break-md) {
       height: auto;
+      .scrollarea-content {
+        touch-action: auto;
+      }
     }
   }
 
